--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">We are a team of passionate and hard working makeover givers. Highly talented and experienced. Be here to see the difference!</h3>
+                    <h3 class="section-subheading text-muted">We are a team of passionate and hard working makeover givers. Highly talented and experienced. Be here to see the difference! We r talented, ambitious motivated,has gained unique skillsfrom th love passion for creativity beauty from a vry early age.runnin r studio frm pst 20 yrs</h3>
                 </div>
             </div>
             <div class="row">
