--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Roopali Makeup Studio</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -403,7 +403,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Main market, Rajouri Garden, New Delhi.</h3>
+                    <h3 class="section-subheading text-muted">G-18, 7A, First Floor, Main market, Rajouri Garden, New Delhi.</h3>
                 </div>
             </div>
             <div class="row">
@@ -446,7 +446,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Your Website 2014</span>
+                    <span class="copyright">Copyright &copy; Tanvi Malhotra 2015</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
